@@ -1,3 +1,9 @@
+2003-04-29	fabian
+    * Fixed a bug in VT100Screen's removeOverLine
+    * Implemented custom setting of scrollback buffer size
+    * a little bit code cleanup in MainMenu and PseudoTerminal.
+    
+    
 2003-04-29	ujwal
 
     * Added Applescript support for "write text <text>" 
